# FedMOE

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml
experiments/: config-linear.yaml  config.yaml  experimental_data.py  find_best_hp.py  run_dataset_visualize.py  run_experiment.py  run_experiment.sh  run_visualize.py  utils.py
experiments/esn_experiments/: README.md  config.yaml  local_run_hp_sweep.sh  run_esn_experiment.py  run_fold_experiment.slrm  run_hp_sweep.sh
experiments/esn_experiments/boc_exchange/: README.md  config.yaml  game_config.yaml  game_run_hp_sweep.sh  game_two_clients_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh  non_game_two_clients_best_hp.sh  run_hp_sweep.sh
experiments/esn_experiments/boc_exchange_validation/: README.md  game_config.yaml  game_run_hp_sweep.sh  non_game_config.yaml  non_game_run_hp_sweep.sh
experiments/esn_experiments/brownian_addition/: README.md  config.yaml  game_best_hp.sh  game_config.yaml  game_run_hp_sweep.sh  game_two_clients_best_hp.sh  local_run_hp_sweep.sh  non_game_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh  non_game_two_clients_best_hp.sh
experiments/esn_experiments/concept_drift/: README.md  game_config.yaml  game_run_hp_sweep.sh  game_two_clients_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh  non_game_two_clients_best_hp.sh
experiments/esn_experiments/covariate_shift/: README.md  config.yaml  game_config.yaml  game_two_clients_best_hp.sh  non_game_config.yaml  non_game_two_clients_best_hp.sh
experiments/esn_experiments/ett_data/: README.md  config.yaml  game_best_hp.sh  game_config.yaml  game_run_hp_sweep.sh  game_two_clients_best_hp.sh  local_run_hp_sweep.sh  non_game_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh  non_game_two_clients_best_hp.sh
experiments/esn_experiments/ett_data_validation/: README.md  game_config.yaml  game_run_hp_sweep.sh  non_game_config.yaml  non_game_run_hp_sweep.sh
experiments/esn_experiments/logistic_data/: README.md  config.yaml  game_config.yaml  game_run_hp_sweep.sh  game_two_clients_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh  non_game_two_clients_best_hp.sh  run_hp_sweep.sh
experiments/esn_experiments/periodic_data/: README.md  config.yaml  game_config.yaml  game_run_hp_sweep.sh  game_two_clients_best_hp.sh  local_run_hp_sweep.sh  non_game_config.yaml  non_game_run_hp_sweep.sh  non_game_two_clients_best_hp.sh
experiments/fonts/: README.md
experiments/old-version/: config.yaml  run_experiment.py  run_hp_sweep.sh
experiments/rfn_experiments/: README.md  config.yaml  local_run_hp_sweep.sh  run_fold_experiment.slrm  run_hp_sweep.sh  run_rfn_experiment.py
experiments/rfn_experiments/boc_exchange/: README.md  config.yaml  game_best_hp.sh  game_config.yaml  game_run_hp_sweep.sh  non_game_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh
experiments/rfn_experiments/boc_exchange_validation/: README.md  game_config.yaml  game_run_hp_sweep.sh  non_game_config.yaml  non_game_run_hp_sweep.sh
experiments/rfn_experiments/brownian_addition/: game_config.yaml  game_run_hp_sweep.sh  non_game_best_hp.sh  non_game_config.yaml
experiments/rfn_experiments/concept_drift/: README.md  game_best_hp.sh  game_config.yaml  game_run_hp_sweep.sh  non_game_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh
experiments/rfn_experiments/covariate_shfit/: README.md  game_config.yaml  local_run_hp_sweep.sh  non_game_config.yaml
experiments/rfn_experiments/ett_data/: README.md  config.yaml  game_best_hp.sh  game_config.yaml  game_run_hp_sweep.sh  non_game_best_hp.sh  non_game_config.yaml  non_game_run_hp_sweep.sh
experiments/rfn_experiments/ett_data_validation/: README.md  game_config.yaml  game_run_hp_sweep.sh  non_game_config.yaml  non_game_run_hp_sweep.sh
experiments/rfn_experiments/logistic_data/: README.md  config.yaml  game_best_hp.sh  game_config.yaml  game_run_hp_sweep.sh  local_run_hp_sweep.sh  non_game_config.yaml  (+1 more)
experiments/transformer_experiments/: README.md  config.yaml  local_run_hp_sweep.sh  local_run_pre_train.sh  pre_train_config.yaml  pre_train_transformer.py  run_fold_experiment.slrm  run_hp_sweep.sh  run_pre_train.sh  run_pre_train.slrm  run_transformer_experiment.py
fedmoe/: client_manager.py  game.py  metrics.py  server.py  utils.py
fedmoe/clients/: client.py  esn_client.py  rfn_client.py  transformer_client.py
fedmoe/datasets/: base_dataset.py  brownian_motion_dataset.py  data_matrix_generator.py  logistic_map_dataset.py  periodic_dataset.py  simple_datasets.py  time_series_data.py
fedmoe/game/: echo_state_game.py  game.py  rfn_game.py  transformer_game.py
fedmoe/metrics/: metric_managers.py  metrics.py
fedmoe/models/: echo_state_net.py  random_feature_net.py  transformer.py
fedmoe/state/: client_state.py  game_state.py
fedmoe/tests/: game_utils.py  manual_calculations.py  test_esn_client.py  test_esn_nash_expectations.py  test_esn_predictions.py  test_game_utils.py  test_metrics.py  test_nash_game.py  test_nash_objective.py  test_rfm_nash_calculations.py  test_rfn_client.py  test_rfn_nash_calculations.py  test_server_mixture.py  test_transformer_client.py  test_transformer_predictions.py  utils.py
fedmoe/utils/: compute_average_mse.py  typing.py  utils.py  visualize_from_json_state.py  visualize_mses_over_lookback.py  visualize_mses_over_params.py  visualize_mses_over_sync_freq.py  visualize_overlaid_server_predictions.py  visualize_relative_errors_over_time.py
(+171 files in other folders)
