[tool.poetry]
name = "fedmoe"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Vector AI Engineering <fl4health@vectorinstitute.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fl4health = "^0.1.17"
torch = "^2.3.0"
EchoTorch = "^0.1.1"
numpy = "^1.26.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pytest = "^8.2.1"
isort = "5.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"
skip_gitignore = true